[package]
name = "toolbox"
version = "0.0.0-alpha.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0", optional = true }
async-graphql = { version = "8.0.0-rc.4", optional = true }
cached = { version = "0.59", features = [
    "async",
    "redis_store",
    "redis_tokio",
] }
chrono = { version = "0.4", features = ["serde"], optional = true }
envconfig = "0.11"
lettre = { version = "0.11", features = [
    "smtp-transport",
    "tokio1-native-tls",
], optional = true }
reqwest = { version = "0.13", features = ["json"], optional = true }
sentry = { version = "0.47", features = ["logs", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"], optional = true }
uuid = { version = "1.23", features = ["serde"] }

[features]
graphql = ["dep:async-graphql"]
identity-client = ["dep:reqwest", "dep:chrono", "dep:url"]
mailer = ["dep:anyhow", "dep:lettre"]
